polished navigation, fonts, positioning. todo: v. center brand, no nav shadow until scroll

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="style/css/responsive.css" rel="stylesheet">
 
     <!-- fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lilita+One|Roboto:300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="assets/js/html5shiv.js"></script>
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">BAHH</a>
+          <a class="brand" href="#">BAH!</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>
@@ -43,7 +43,7 @@
                 <a href="#festival">Festival</a>
               </li>
               <li>
-                <a href="#signup">Signup</a>
+                <a href="#apply">Apply</a>
               </li>
             </ul>
           </div>
@@ -58,11 +58,11 @@
         <p>a call for applications for the world's first</p>
         <form class="signup form-horizontal">
             <div class="input-append">
-              <input type="email" class="appendedInputButton span3" id="inputEmail" placeholder="zach@weinersmith.org">
-              <button class="btn" type="submit">Sign up</button>
+              <input type="email" class="appendedInputButton span3" id="inputEmail" placeholder="zach@weinersmith.org" autofocus="autofocus">
+              <button class="btn" type="submit">Email me about the Festival</button>
             </div>
         </form>
-        <img src="img/bulb.jpg"></img>
+        <img src="img/bulb.jpg" id="lightbulb"></img>
       </div>
     </header>
 
@@ -76,7 +76,7 @@
 
     <!-- Signup
     ================================================== -->
-    <article id="signup"></article>
+    <article id="apply"></article>
 
     <!-- Footer
     ================================================== -->
