added content, style tweaks,  calendar plugin, mailchimp codes and google analytics

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Base · Bootstrap</title>
+    <title>BAH! - we want your bad hypotheses</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A call for applications for the world's first Bad Ad-Hoc Hypothesis Festival">
+    <meta name="author" content="JP Bonner">
 
     <!-- styles -->
     <link href="style/css/main.css" rel="stylesheet">
     <link href="style/css/responsive.css" rel="stylesheet">
 
     <!-- fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="assets/js/html5shiv.js"></script>
@@ -37,10 +37,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li>
-                <a href="#idea">Idea</a>
+                <a href="#festival">Festival</a>
               </li>
               <li>
-                <a href="#festival">Festival</a>
+                <a href="#details">Details</a>
               </li>
               <li>
                 <a href="#apply">Apply</a>
@@ -53,52 +53,145 @@
 
     <!-- Header
     ================================================== -->
-    <header>
-      <div class="container" id="blurb">
-        <p>a call for applications for the world's first</p>
-        <form class="signup form-horizontal">
-            <div class="input-append">
-              <input type="email" class="appendedInputButton span3" id="inputEmail" placeholder="zach@weinersmith.org" autofocus="autofocus">
-              <button class="btn" type="submit">Email me about the Festival</button>
-            </div>
-        </form>
-        <img src="img/bulb.jpg" id="lightbulb"></img>
-      </div>
+    <header class="container" id="blurb">
+      <p>a call for applications for the world's first</p>
+      <form class="signup form-horizontal" action="http://j4p3.us5.list-manage1.com/subscribe/post?u=a848c9c3e2fc8c479db48deae&amp;id=10ab2095e8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="input-append">
+            <input type="email" class="appendedInputButton span3" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="zach@weinersmith.org" autofocus="autofocus">
+            <button class="btn" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Email me about the Festival</button>
+          </div>
+      </form>
+      <img src="img/bulb.jpg" id="lightbulb"></img>
     </header>
 
-    <!-- Idea - brief description of the event
+    <!-- Festival - brief description of the event
     ================================================== -->
-    <article id="idea"></article>
+    <section id="festival" class="row">
+      <div class="span4 offset2">
+        <header><h1>The Festival</h1></header>
+        <h4>What is it?</h4>
+        <p>The Festival of Bad Ad Hoc Hypotheses (BAH!) is a celebration of well-argued and thoroughly researched but completely incorrect evolutionary theory. It is put on by Zach Weinersmith (cartoonist of <a href="http://www.smbc-comics.com/">SMBC</a>) and <a href="http://breadpig.com/">breadpig</a> (publishers of SMBC and XKCD), and sponsored by <a href="http://evostudies.org/">EvoS Consortium</a> and <a href="http://thisviewoflife.com/index.php">“This View of Life”</a> magazine (Editor-in-Chief David Sloan Wilson). It will be held on the MIT campus on the evening of April 20th, 2013.</p>
+        <h4>What are we looking for?</h4>
+        <p>We need short (3-5 minute) presentations which describe original bad theories of evolutionary adaptation. The speakers will then be asked to “defend” their theories before a panel of judges for 3-5 minutes.</p>
+        <h4>What format is the event?</h4>
+        <p>We are expecting to have 7 speakers presenting their bad theories in front of a live audience. They will have a mic and access to a blackboard and/or Powerpoint slides. There will be a panel of geeky judges to determine who presented the best theory, and the whole thing will be recorded.</p>
+        <h4>What's in it for me?</h4>
+        <p>The presentation judged best will get a complete set of SMBC books, and an award for best presentation at the very first BAH! You’ll also have the opportunity to talk before a big audience, and hang out with some famous geeks.</p>
+      </div>
+      <div class="span6">
+        <h4 class="caption">The comic that inspired it all:</h4>
+        <img src="img/bahfull.gif" id="comic"></img>
+      </div>
+    </section>
 
-    <!-- Festival - location, date info and calendar links
+    <!-- Details - location, date info and calendar links
     ================================================== -->
-    <article id="festival"></article>
+    <section id="details" class="row">
+      <div class="span6 offset2">
+        <header><h1>The Details</h1></header>
+        <h4>When and where is it?</h4>
+        <p>The event will be held at MIT, room 26-100, on the evening of April 20th, 2013.</p>
+        <iframe class="thumbnail" width="570" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=42.360859,-71.091167&amp;sll=42.036922,-71.683501&amp;sspn=2.247892,5.388794&amp;ie=UTF8&amp;t=m&amp;ll=42.360891,-71.091156&amp;spn=0.022198,0.066948&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=42.360859,-71.091167&amp;sll=42.036922,-71.683501&amp;sspn=2.247892,5.388794&amp;ie=UTF8&amp;t=m&amp;ll=42.360891,-71.091156&amp;spn=0.022198,0.066948&amp;z=14" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+      </div>
+      <div class="span4" id="calendar">
+        <a href="http://bahfest.com" title="Add to Calendar" class="addthisevent">
+          <h4>Add to Calendar</h4>
+          <span class="_url">http://bahfest.com</span>
+          <span class="_start">20-04-2013 16:00:00</span>
+          <span class="_end">20-04-2013 20:00:00</span>
+          <span class="_zonecode">15</span>
+          <span class="_summary">BAH! The Festival of Bad Ad Hoc Hypotheses</span>
+          <span class="_description">The Festival of Bad Ad Hoc Hypotheses (BAH!) is a celebration of well-argued and thoroughly researched but completely incorrect evolutionary theory.</span>
+          <span class="_location">42.360859,-71.091167</span>
+          <span class="_organizer">SMBC & Breadpig</span>
+          <span class="_organizer_email" style="display:none"></span>
+          <span class="_facebook_event" style="display:none"></span>
+          <span class="_all_day_event">true</span>
+          <span class="_date_format">MM/DD/YYYY</span>
+        </a>
+      </div>
+    </section>
 
     <!-- Signup
     ================================================== -->
-    <article id="apply"></article>
+    <section id="apply" class="row">
+      <div class="span6 offset2">
+        <header><h1>Apply</h1></header>
+        <h4>How do I submit?</h4>
+        <p>Please prepare a description of your theory that will fit on one single-spaced page (mandatory) and audio or video of you speaking (optional, but very helpful) and submit it to <strong>badadhoc at gmail.com</strong> before March 10.</p>
+        <p>If we like your theory, we’ll ask for a more thought out presentation and work with you to get something fantastic for the final event.</p>
+        <p>Since the event is soon, we’ll be making decisions quickly. The sooner you can get us a high quality presentation, the better.</p>
+        <h4>What’s in a good theory?</h4>
+        <p>Our initial selection readers AND our judges will be grading theories on four criteria:
+        <ol>
+          <li>Force of Science - how much “scientific” information was brought to bear (graphs, real citations, “research” etc.)</li>
+          <li>Artistry - how unexpected and clever the idea and presentation are, and how well the presentation is delivered.</li>
+          <li>Parsimony - the simplest theory that explains the most data is best.</li>
+          <li>Strength of Defense - how well did you defend your views to the judges. Please note - being funny is not a good defense. We want to see you actually defend your terrible terrible theory!</li>
+        </ol></p>
+        <h4>Are there things I can’t say?</h4>
+        <p>It’s evolution, so there’ll no doubt be plenty of talk of sex. However, since we’d like a large potential audience, we’d prefer you not do anything too grotesque or horrifying. </p>
+        <h4>Do I need to be a scientist to submit?</h4>
+        <p>Absolutely not. However, you do need to be able to talk in a scientific manner and speak well.</p>
+        <h4>Can you pay for my travel?</h4>
+        <p>Our travel budget is extremely limited, so we probably can’t. For this first event, we’re looking for people in the Boston/Cambridge area, or people who can pay their own way there.</p>
+        <p>Please let us know your travel needs. Even if we can’t have you this time, we can keep you in mind for possible future events.</p>
+        <h4>How many submissions can I send?</h4>
+        <p>As many as you like, but don’t kill us with them! If you have a bunch, select your best 3 and send them.</p>
+      </div>
+    </section>
 
     <!-- Footer
     ================================================== -->
-    <footer class="footer">
-      <div class="container">
-        <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-        <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <p><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-        <ul class="footer-links">
-          <li><a href="http://blog.getbootstrap.com">Blog</a></li>
-          <li class="muted">&middot;</li>
-          <li><a href="https://github.com/twitter/bootstrap/issues?state=open">Issues</a></li>
-          <li class="muted">&middot;</li>
-          <li><a href="https://github.com/twitter/bootstrap/blob/master/CHANGELOG.md">Changelog</a></li>
-        </ul>
-      </div>
+    <footer class="footer row">
+        <form class="signup form-horizontal offset2" action="http://j4p3.us5.list-manage1.com/subscribe/post?u=a848c9c3e2fc8c479db48deae&amp;id=10ab2095e8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="input-append">
+            <input type="email" class="appendedInputButton span3" name="EMAIL" id="mce-EMAIL" placeholder="zach@weinersmith.org">
+            <button class="btn" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Email me about the Festival</button>
+          </div>
+        </form>
+        <div id="attributions">
+          <div class="span3 offset2"> Event by <a href="http://www.smbc-comics.com/">Zach Weinersmith</a> (cartoonist of SMBC comics) and <a href="http://breadpig.com/">breadpig</a> (publishers of SMBC and XKCD)</div>
+          <div class="span3"><a href="http://j4p3.com/?utm_source=bah-site&utm_medium=referral&utm_content=attribution&utm_campaign=bah">Site by JP</a></div>
+        </div>
     </footer>
 
     <!-- javascript
     ================================================== -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/bootstrap-ck.js"></script>
+    <script type="text/javascript" src="js/application-ck.js"></script>
+    <script type="text/javascript" src="js/atemay-ck.js"></script>
+
+    <!-- AddThisEvent Settings 
+    Credit to Michael Nilsson --> 
+    <script type="text/javascript">
+      addthisevent.settings({
+          mouse     : true,
+          css       : true,
+          outlook   : {show:true, text:"Outlook Calendar"},
+          google    : {show:true, text:"Google Calendar"},
+          yahoo     : {show:false, text:"Yahoo Calendar"},
+          hotmail   : {show:false, text:"Hotmail Calendar"},
+          ical      : {show:true, text:"iCal Calendar"},
+          facebook  : {show:false, text:"Facebook Event"},
+          callback  : ""
+      });
+    </script>
+
+    <!-- GA
+    ================================================== -->
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-38869603-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
   </body>
 </html>
